# automake-demo

./: Makefile.am  blog.md  configure.ac  cout_log_interface.cpp  easy_log.cpp  easy_log.h  main.cpp
examples/: Makefile.am  Makefile.in  example.cpp
src/: Makefile.am  Makefile.in  cout_log_interface.h  log_interface.h
